metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__Industry__c.field-meta.xml
<CustomField>
    <fullName>workspan__Industry__c</fullName>
    <description>OOB this is the Industry of the Account that is selected on the Opportunity, but it can be changed on the Field Mapping page of the WorkSpan Admin tab.</description>
    <inlineHelpText>The industry you classified the customer into</inlineHelpText>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advertising &amp; Marketing</fullName>
            </value>
            <value>
                <fullName>Aerospace</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Business &amp; Professional Services</fullName>
            </value>
            <value>
                <fullName>Computers &amp; Electronics</fullName>
            </value>
            <value>
                <fullName>Consumer Goods</fullName>
            </value>
            <value>
                <fullName>Consumer Packaged Goods</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Electrical &amp; Electronics</fullName>
            </value>
            <value>
                <fullName>Energy - Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>Energy - Power &amp; Utilities</fullName>
            </value>
            <value>
                <fullName>Energy &amp; Utilities</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Food Beverage &amp; Restaurants</fullName>
                <label>Food, Beverage &amp; Restaurants</label>
            </value>
            <value>
                <fullName>Gaming</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Healthcare &amp; Life Sciences</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Industrial Goods &amp; Manufacturing</fullName>
            </value>
            <value>
                <fullName>Law &amp; Government</fullName>
            </value>
            <value>
                <fullName>Life Sciences</fullName>
            </value>
            <value>
                <fullName>Logistics &amp; Transportation</fullName>
            </value>
            <value>
                <fullName>Manufacturing Industrial &amp; Transportation</fullName>
                <label>Manufacturing, Industrial &amp; Transportation</label>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Marketing &amp; Advertising</fullName>
            </value>
            <value>
                <fullName>Media &amp; Entertainment</fullName>
            </value>
            <value>
                <fullName>Mining</fullName>
            </value>
            <value>
                <fullName>Non-Profit Organization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>