metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>workspan__IsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The technical field to flag deleted from Workspan records</description>
    <label>Is Deleted</label>
    <type>Checkbox</type>
</CustomField>