metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__IsLaunched__c.field-meta.xml
<CustomField>
    <fullName>workspan__IsLaunched__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The technical field to track the Launched status</description>
    <label>Is Launched</label>
    <type>Checkbox</type>
</CustomField>