metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__IsMarkedAsLost__c.field-meta.xml
<CustomField>
    <fullName>workspan__IsMarkedAsLost__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The technical field to track the Marked As Lost status</description>
    <label>Is Marked As Lost</label>
    <type>Checkbox</type>
</CustomField>