metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__IsNotDistributed__c.field-meta.xml
<CustomField>
    <fullName>workspan__IsNotDistributed__c</fullName>
    <description>This is a technical field that fuels the &quot;Incoming Not Distributed&quot; referral list view. The idea is that all incoming referrals are created and owned by the integration user, but when they are distributed—the owner is changed to some AE who takes it over, making the formula expression FALSE. See the &quot;Incoming Flow&quot; section of the user guide for more details.</description>
    <formula>(CreatedById = OwnerId) &amp;&amp; ISPICKVAL(workspan__ReferralType__c, &apos;Incoming&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>TRUE if the incoming referral hasn&apos;t been assigned to an AE yet</inlineHelpText>
    <label>Is Not Distributed</label>
    <type>Checkbox</type>
</CustomField>