metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__LastChangedInSalesforceOn__c.field-meta.xml
<CustomField>
    <fullName>workspan__LastChangedInSalesforceOn__c</fullName>
    <description>Technical field to track changes timestamp.</description>
    <label>Last Changed On</label>
    <type>DateTime</type>
</CustomField>