metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__LastSyncFromSalesforceMessage__c.field-meta.xml
<CustomField>
    <fullName>workspan__LastSyncFromSalesforceMessage__c</fullName>
    <inlineHelpText>The message (if any) received when last sending this Referral to WorkSpan</inlineHelpText>
    <label>Last Sync From Salesforce Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>