metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__LastSyncFromSalesforceOn__c.field-meta.xml
<CustomField>
    <fullName>workspan__LastSyncFromSalesforceOn__c</fullName>
    <inlineHelpText>The date/time when this Referral was last sent to WorkSpan</inlineHelpText>
    <label>Last Sync From Salesforce On</label>
    <type>DateTime</type>
</CustomField>