metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__LastSyncFromSalesforceStatus__c.field-meta.xml
<CustomField>
    <fullName>workspan__LastSyncFromSalesforceStatus__c</fullName>
    <inlineHelpText>The status of the last request sent with this Referral to WorkSpan</inlineHelpText>
    <label>Last Sync From Salesforce Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>