metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__LastSyncFromWorkSpanMessage__c.field-meta.xml
<CustomField>
    <fullName>workspan__LastSyncFromWorkSpanMessage__c</fullName>
    <inlineHelpText>The message (if any) received when last receiving this Referral from WorkSpan</inlineHelpText>
    <label>Last Sync From WorkSpan Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>