metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__LastSyncFromWorkSpanOn__c.field-meta.xml
<CustomField>
    <fullName>workspan__LastSyncFromWorkSpanOn__c</fullName>
    <inlineHelpText>The date/time when this Referral was last received from WorkSpan</inlineHelpText>
    <label>Last Sync From WorkSpan On</label>
    <type>DateTime</type>
</CustomField>