metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__LastSyncFromWorkSpanStatus__c.field-meta.xml
<CustomField>
    <fullName>workspan__LastSyncFromWorkSpanStatus__c</fullName>
    <inlineHelpText>The status of the last request received with this Referral from WorkSpan</inlineHelpText>
    <label>Last Sync From WorkSpan Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>