metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__LastSyncWithGoogleOn__c.field-meta.xml
<CustomField>
    <fullName>workspan__LastSyncWithGoogleOn__c</fullName>
    <description>This field is populated from WorkSpan.</description>
    <inlineHelpText>The date/time when WorkSpan and Google last exchanged this Referral&apos;s data</inlineHelpText>
    <label>Google Integration Last Update Date</label>
    <type>DateTime</type>
</CustomField>