metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__LastSyncWithMicrosoftMessage__c.field-meta.xml
<CustomField>
    <fullName>workspan__LastSyncWithMicrosoftMessage__c</fullName>
    <description>This field is populated from WorkSpan.</description>
    <inlineHelpText>The message (if any) received when WorkSpan and MPC last exchanged this Referral&apos;s data</inlineHelpText>
    <label>Microsoft Integration Message</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>