metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__LastSyncWithMicrosoftOn__c.field-meta.xml
<CustomField>
    <fullName>workspan__LastSyncWithMicrosoftOn__c</fullName>
    <description>This field is populated from WorkSpan.</description>
    <inlineHelpText>The date/time when WorkSpan and MPC last exchanged this Referral&apos;s data</inlineHelpText>
    <label>Microsoft Integration Last Update Date</label>
    <type>DateTime</type>
</CustomField>