metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__LastSyncWithMicrosoftStatus__c.field-meta.xml
<CustomField>
    <fullName>workspan__LastSyncWithMicrosoftStatus__c</fullName>
    <description>This field is populated from WorkSpan.</description>
    <inlineHelpText>The status of the last request exchanged between WorkSpan and MPC with this Referral&apos;s data</inlineHelpText>
    <label>Microsoft Integration Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>