metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__MicrosoftSolutionsCount__c.field-meta.xml
<CustomField>
    <fullName>workspan__MicrosoftSolutionsCount__c</fullName>
    <description>The number of Microsoft Solutions added to this Referral.</description>
    <inlineHelpText>The number of Microsoft Solutions added to this Referral.</inlineHelpText>
    <label>Microsoft Solutions Count</label>
    <summaryForeignKey>workspan__ReferralMicrosoftSolution__c.workspan__Referral__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>