metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__NextStep__c.field-meta.xml
<CustomField>
    <fullName>workspan__NextStep__c</fullName>
    <description>OOB this is the same NextStep as on the Opportunity, but it can be changed on the Field Mapping page of the WorkSpan Admin tab.</description>
    <inlineHelpText>Describes the next steps for all the relevant stakeholders</inlineHelpText>
    <label>Next Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>