metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__Notes__c.field-meta.xml
<CustomField>
    <fullName>workspan__Notes__c</fullName>
    <inlineHelpText>Share notes and additional information with your partners</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>