metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>workspan__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If you populate this lookup outside the Incoming Referral flows described in the user guide, no additional logic is triggered.</description>
    <inlineHelpText>The Opportunity that is being referred</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>