metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__OpportunityOwnerFirstName__c.field-meta.xml
<CustomField>
    <fullName>workspan__OpportunityOwnerFirstName__c</fullName>
    <description>OOB this is the owner of the Opportunity that the Referral is linked to, but it can be changed on the Field Mapping page of the WorkSpan Admin tab.</description>
    <inlineHelpText>First name of the owner of the Opportunity which is associated with the Referral</inlineHelpText>
    <label>Opportunity Owner First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>