metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__OpportunityOwnerPhone__c.field-meta.xml
<CustomField>
    <fullName>workspan__OpportunityOwnerPhone__c</fullName>
    <description>OOB this is the owner of the Opportunity that the Referral is linked to, but it can be changed on the Field Mapping page of the WorkSpan Admin tab.</description>
    <inlineHelpText>Phone of the owner of the Opportunity which is associated with the Referral</inlineHelpText>
    <label>Opportunity Owner Phone</label>
    <type>Phone</type>
</CustomField>