metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__OpportunitySource__c.field-meta.xml
<CustomField>
    <fullName>workspan__OpportunitySource__c</fullName>
    <description>OOB this is the LeadSource from the Opportunity, but it can be changed on the Field Mapping page of the WorkSpan Admin tab.</description>
    <inlineHelpText>Source of the Opportunity which is associated with the Referral</inlineHelpText>
    <label>Opportunity Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Phone Inquiry</fullName>
            </value>
            <value>
                <fullName>Partner Referral</fullName>
            </value>
            <value>
                <fullName>Purchased List</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>