metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__PartnerManagerEmail__c.field-meta.xml
<CustomField>
    <fullName>workspan__PartnerManagerEmail__c</fullName>
    <inlineHelpText>Partner Manager Details - business email address of the partner manager</inlineHelpText>
    <label>Partner Manager Email</label>
    <type>Email</type>
</CustomField>