metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__PartnerManagerFirstName__c.field-meta.xml
<CustomField>
    <fullName>workspan__PartnerManagerFirstName__c</fullName>
    <inlineHelpText>Partner Manager Details - first name of the partner manager</inlineHelpText>
    <label>Partner Manager First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>