metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__PartnerWsIds__c.field-meta.xml
<CustomField>
    <fullName>workspan__PartnerWsIds__c</fullName>
    <description>Technical field. Stores WorkSpan Ids of selected partners.</description>
    <label>Partner WorkSpan Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>