metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__PassiveCoSellPartners__c.field-meta.xml
<CustomField>
    <fullName>workspan__PassiveCoSellPartners__c</fullName>
    <description>Always sent from WorkSpan, can&apos;t be changed in Salesforce.</description>
    <inlineHelpText>Track the partners who are passively engaged in selling this opportunity to the customer with your sales team (e.g., by endorsing your solution)</inlineHelpText>
    <label>Passive Co-Sell Partners</label>
    <length>255</length>
    <type>Text</type>
</CustomField>