metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__Probability__c.field-meta.xml
<CustomField>
    <fullName>workspan__Probability__c</fullName>
    <description>OOB this is the same Probability as on the Opportunity, but it can be changed on the Field Mapping page of the WorkSpan Admin tab.</description>
    <inlineHelpText>The probability of the Referral to be closed won</inlineHelpText>
    <label>Probability %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>