metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__ReadyForSubmit__c.field-meta.xml
<CustomField>
    <fullName>workspan__ReadyForSubmit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is deprecated. ReadyForSubmitPicklist__c must be used instead.</description>
    <inlineHelpText>This field is deprecated. ReadyForSubmitPicklist__c must be used instead.</inlineHelpText>
    <label>Ready For Submit (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>