metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__ReadyForSubmitPicklist__c.field-meta.xml
<CustomField>
    <fullName>workspan__ReadyForSubmitPicklist__c</fullName>
    <inlineHelpText>Track if you are ready to share this opportunity as a Referral with your partner or not</inlineHelpText>
    <label>Ready For Submit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>workspan__YesNo</valueSetName>
    </valueSet>
</CustomField>