metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__ReferralCreationMethod__c.field-meta.xml
<CustomField>
    <fullName>workspan__ReferralCreationMethod__c</fullName>
    <description>Referral Creation Method field is populated automatically depending on how the Referral was created. If Referral was bulk created, the value should be ‘Bulk‘; if the Referral was created using automation, the value should be ‘Flow‘ and if the Referral was created manually from the interface, the value should be ‘UI‘.</description>
    <inlineHelpText>Referral Creation Method field is populated automatically depending on how the Referral was created. If Referral was bulk created, the value should be ‘Bulk’; if the Referral was created using automation, the value should be ‘Flow’ and if the Referral was created manually from the interface, the value should be ‘UI’.</inlineHelpText>
    <label>Referral Creation Method</label>
    <length>20</length>
    <type>Text</type>
</CustomField>