metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__ReferralExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>workspan__ReferralExpirationDate__c</fullName>
    <description>Always sent from WorkSpan, can&apos;t be changed in Salesforce.</description>
    <inlineHelpText>Records the Expiry Date of the Referral</inlineHelpText>
    <label>Referral Expiration Date</label>
    <type>Date</type>
</CustomField>