metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__ReferralReceivedOn__c.field-meta.xml
<CustomField>
    <fullName>workspan__ReferralReceivedOn__c</fullName>
    <description>Always sent from WorkSpan, can&apos;t be changed in Salesforce.</description>
    <inlineHelpText>Records the date on which your company received the Referral from your partner</inlineHelpText>
    <label>Referral Received On</label>
    <type>DateTime</type>
</CustomField>