metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__ReferralSentOn__c.field-meta.xml
<CustomField>
    <fullName>workspan__ReferralSentOn__c</fullName>
    <description>Always sent from WorkSpan, can&apos;t be changed in Salesforce.</description>
    <inlineHelpText>Records the date on which your company sent the Referral to your partner</inlineHelpText>
    <label>Referral Sent On</label>
    <type>DateTime</type>
</CustomField>