metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__ReferralStatus__c.field-meta.xml
<CustomField>
    <fullName>workspan__ReferralStatus__c</fullName>
    <defaultValue>&quot;Pending&quot;</defaultValue>
    <inlineHelpText>Describes the status of the Referral</inlineHelpText>
    <label>Referral Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>