metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__ReferralStatusChangeReason__c.field-meta.xml
<CustomField>
    <fullName>workspan__ReferralStatusChangeReason__c</fullName>
    <inlineHelpText>Share the reason for your Referral status change. It informs your partner on your partner team&apos;s read of the opportunity.</inlineHelpText>
    <label>Referral Status Change Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>