metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__ReferralSubStatus__c.field-meta.xml
<CustomField>
    <fullName>workspan__ReferralSubStatus__c</fullName>
    <description>This field is deprecated.</description>
    <label>Referral Sub-Status (Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>