metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__ReferralType__c.field-meta.xml
<CustomField>
    <fullName>workspan__ReferralType__c</fullName>
    <description>This field describes direction of the Referral — Incoming or Outgoing. It comes by the &apos;referral_type&apos; API name.</description>
    <inlineHelpText>Describes direction of the Referral - Incoming/Outgoing. API Name for the field is &apos;referral_type&apos;.</inlineHelpText>
    <label>Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outgoing</fullName>
            </value>
            <value>
                <fullName>Incoming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>