metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__Region__c.field-meta.xml
<CustomField>
    <fullName>workspan__Region__c</fullName>
    <inlineHelpText>Your company&apos;s division that owns the Referral</inlineHelpText>
    <label>Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>South America</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>CS APJ</fullName>
            </value>
            <value>
                <fullName>CS EMEA North</fullName>
            </value>
            <value>
                <fullName>CS EMEA South</fullName>
            </value>
            <value>
                <fullName>CS G.China</fullName>
            </value>
            <value>
                <fullName>CS Latin America</fullName>
            </value>
            <value>
                <fullName>CS MEE</fullName>
            </value>
            <value>
                <fullName>CS North America</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>