metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__SalesStage__c.field-meta.xml
<CustomField>
    <fullName>workspan__SalesStage__c</fullName>
    <description>OOB this is the StageName from the Opportunity, but it can be changed on the Field Mapping page of the WorkSpan Admin tab.</description>
    <inlineHelpText>Sales Stage of the Referral.</inlineHelpText>
    <label>Sales Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Technical Validation</fullName>
            </value>
            <value>
                <fullName>Business Validation</fullName>
            </value>
            <value>
                <fullName>Committed</fullName>
            </value>
            <value>
                <fullName>Launched</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>