metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__SkipValidationRules__c.field-meta.xml
<CustomField>
    <fullName>workspan__SkipValidationRules__c</fullName>
    <description>Will skip Referral Validation rules if true</description>
    <formula>workspan__EditedBy__c != &apos;UI&apos;
&amp;&amp; workspan__EditedBy__c != &apos;UI-NoSend&apos;
&amp;&amp; workspan__EditedBy__c != &apos;Bulk&apos;
&amp;&amp; workspan__EditedBy__c != &apos;Resubmit&apos;
|| workspan__EditByIntegration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skip validation rules</label>
    <type>Checkbox</type>
</CustomField>