metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__SourcedByPartner__c.field-meta.xml
<CustomField>
    <fullName>workspan__SourcedByPartner__c</fullName>
    <description>Always sent from WorkSpan, can&apos;t be changed in Salesforce.</description>
    <inlineHelpText>Track the partner who sourced this Referral to your company</inlineHelpText>
    <label>Sourced By Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>