metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__SourcedToPartner__c.field-meta.xml
<CustomField>
    <fullName>workspan__SourcedToPartner__c</fullName>
    <description>Populated with PartnerId when a Referral is created in Salesforce. Otherwise is sent from WorkSpan. Can&apos;t be changed after creation.</description>
    <inlineHelpText>Track the partner to whom your company sourced this Referral</inlineHelpText>
    <label>Sourced To Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>