metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__SubmittedToPartnerSystem__c.field-meta.xml
<CustomField>
    <fullName>workspan__SubmittedToPartnerSystem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted to Partner System</label>
    <type>Checkbox</type>
</CustomField>