metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__TCV__c.field-meta.xml
<CustomField>
    <fullName>workspan__TCV__c</fullName>
    <description>Total contract value partner expecting</description>
    <inlineHelpText>Total contract value partner expecting</inlineHelpText>
    <label>TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>